--- a/addons_custom/g_hr/views/g_employee_certification_view.xml
+++ b/addons_custom/g_hr/views/g_employee_certification_view.xml
@@ -5,12 +5,13 @@
             <field name="name">g.employee.certification.form</field>
             <field name="model">g.employee.certification</field>
             <field name="arch" type="xml">
-                <form string="Employee Certification">
+                <form string="Chứng chỉ">
                     <sheet>
                         <group>
                             <field name="name"/>
                             <field name="description"/>
                             <field name="employee_id"/>
+                            <field name="score"/>
                             <field name="attachment_ids" widget="many2many_binary"/>
                         </group>
                         <group>
@@ -19,34 +20,30 @@
                             <field name="cer_type"/>
                         </group>
                     </sheet>
-                    <div class="oe_chatter">
-                        <field name="message_follower_ids" widget="mail_followers"/>
-                        <field name="message_ids" widget="mail_thread"/>
-                    </div>
+                  <chatter reload_on_follower="True"/>
                 </form>
-
             </field>
         </record>
 
-        <record id="g_employee_certification_tree_view" model="ir.ui.view">
-            <field name="name">g.employee.certification.tree</field>
+        <record id="g_employee_certification_list_view" model="ir.ui.view">
+            <field name="name">g.employee.certification.list</field>
             <field name="model">g.employee.certification</field>
             <field name="arch" type="xml">
-                <tree>
+                <list>
                     <field name="name"/>
                     <field name="employee_id"/>
                     <field name="cer_type"/>
-                </tree>
+                </list>
             </field>
         </record>
+
 
         <record id="action_g_employee_certification" model="ir.actions.act_window">
             <field name="name">Employee Certification</field>
             <field name="res_model">g.employee.certification</field>
-            <field name="view_mode">tree,form</field>
-
+            <field name="view_mode">list,form</field>
         </record>
 
-        <menuitem id="menu_g_employee_certification" action="action_g_employee_certification" name="Chứng chỉ" parent="hr.menu_hr_root" sequence="10"/>
+        <menuitem id="menu_g_employee_certification" action="action_g_employee_certification" name="Chứng chỉ" parent="hr.menu_hr_root" sequence="3"/>
     </data>
 </odoo>
